working on shading customFills

--- a/source/dialogs/log-track-properties/log-track-properties-modal.html
+++ b/source/dialogs/log-track-properties/log-track-properties-modal.html
@@ -260,7 +260,7 @@
                                     <button class="btn btn-default" ng-click="wiModal.removeRowCurve();">
                                         <span class="delete-16x16"></span>
                                     </button>
-                                    <button class="btn btn-default" ng-click="wiModal.addRow();">
+                                    <button class="btn btn-default" ng-click="wiModal.addRowCurve();">
                                         <span class="ok-16x16"></span>
                                     </button>
                                 </div>
