--- a/source/html/index.html
+++ b/source/html/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" type="text/css" href="vendor/css/bootstrap-colorpicker.min.css">
     <link rel="stylesheet" type="text/css" href="css/dialogs.css">
     <link rel="stylesheet" type="text/css" href="css/color-picker.css">
+    <link rel="stylesheet" href="vendor/css/angular-resizable.min.css">
 
     <link rel="stylesheet" href="css/sprite_16.css">
     <link rel="stylesheet" href="css/sprite_32.css">
@@ -62,6 +63,7 @@
     <script src='vendor/js/goldenlayout.min.js'></script>
     <script src='vendor/js/d3.min.js'></script>
     <script src='vendor/js/ResizeSensor.js'></script>
+    <script src="vendor/js/angular-resizable.min.js"></script>
     <!-- color picker -->
     <script src="vendor/js/kendo.all.min.js"></script>
     <script type="text/javascript" src="vendor/js/bootstrap-colorpicker.min.js"></script>
