--- a/source/html/ribbon-block/index.html
+++ b/source/html/ribbon-block/index.html
@@ -1,4 +1,4 @@
-<wi-tabset>
+<wi-tabset toggle='true' on-toggle='onRibbonToggle'>
     <wi-tab heading="Project" closable='false'>
         @@include('./project-tab/index.html')
     </wi-tab>
