--- a/source/html/index.html
+++ b/source/html/index.html
@@ -64,6 +64,7 @@
     <script src='vendor/js/d3.min.js'></script>
     <script src='vendor/js/ResizeSensor.js'></script>
     <script src="vendor/js/angular-resizable.min.js"></script>
+    <script src="vendor/js/simple-statistics.min.js"></script>
     <!-- color picker -->
     <script src="vendor/js/kendo.all.min.js"></script>
     <script type="text/javascript" src="vendor/js/bootstrap-colorpicker.min.js"></script>
