--- a/source/dialogs/shading-attribute/shading-attribute-modal.html
+++ b/source/dialogs/shading-attribute/shading-attribute-modal.html
@@ -106,12 +106,9 @@
                                 <div class="col-sm-4">
                                     <select ng-model="wiModal.shadingOptions.idLeftLine" name="curveName"
                                             class="form-control wi-form-control" 
+                                            ng-options="item.id as item.datasetCurve for item in wiModal.leftLimit"
                                             ng-change="wiModal.setShadingName(wiModal.shadingOptions.idLeftLine, false); wiModal.setLimit2();"
                                             ng-disabled="!wiModal.shadingOptions.idRightLine">
-                                            <option value="-1">Left</option>
-                                            <option value="-2">Right</option>
-                                            <option value="-3">Custom</option>
-                                            <option value="{{item.id}}" ng-repeat="item in wiModal.curvesOnDataset">{{item.datasetCurve}}</option>
                                     </select>
                                 </div>
                                 <div class="col-sm-4">
@@ -140,7 +137,7 @@
                             </div>
                         </div>
                     </div>
-                    <hr>
+                    <hr class="margin-tb-5px">
                     <div class="row padding-bottom-1em" ng-show="wiModal.shadingOptions.shadingStyle == 'fillPattern'">
                         <div class="container-fluid">
                             <div class="row padding-bottom-1em">
@@ -352,7 +349,7 @@
 
                     <div class="row padding-bottom-1em" ng-show="wiModal.shadingOptions.shadingStyle == 'variableShading'">
                         <div class="container-fluid">
-                            <div class="row padding-bottom-1em">
+                            <div class="row">
                                 <div class="col-sm-7 padding-0">
                                     <div class="form-group">
                                         <label class="control-label col-sm-7 padding-right-0">Shading Controlled by Curve</label>
@@ -380,8 +377,8 @@
                                     <div class="form-group">
                                         <label>
                                             <input type="checkbox"
-                                                   ng-model="wiModal.dislayType" 
-                                                   ng-change="wiModal.variableShadingOptions.fill.display = !wiModal.dislayType; wiModal.correctFillingStyleVarShading()" 
+                                                   ng-model="wiModal.displayType" 
+                                                   ng-change="wiModal.correctFillingStyleVarShading()" 
                                                    >
                                                 Positive/Negative Fill
                                         </label>
@@ -397,7 +394,7 @@
                                 </label>
                             </div>
 
-                            <div ng-show="wiModal.variableShadingOptions.fill.display && wiModal.varShadingType == 'gradient'">
+                            <div ng-show="!wiModal.displayType && wiModal.varShadingType == 'gradient'">
                                 <div class="row padding-bottom-1em padding-left-1em">
                                     <div class="col-sm-3">
                                         Curve Value:
@@ -456,7 +453,7 @@
                                 </div>
                             </div>
 
-                            <div ng-show="!wiModal.variableShadingOptions.fill.display && wiModal.varShadingType == 'gradient'">
+                            <div ng-show="wiModal.displayType && wiModal.varShadingType == 'gradient'">
                                 <h5 class="normal-text">Positive Side</h5>
                                 <div class="row padding-bottom-1em padding-left-1em">
                                     <div class="col-sm-3">
@@ -568,7 +565,7 @@
                                     Palette
                                 </label>
                             </div>
-                            <div ng-show="wiModal.variableShadingOptions.fill.display && wiModal.varShadingType == 'palette'">
+                            <div ng-show="!wiModal.displayType && wiModal.varShadingType == 'palette'">
                                 <div class="row padding-bottom-1em padding-left-1em">
                                     <div class="col-sm-3">
                                         Curve Value:
@@ -608,16 +605,16 @@
                                     </div>
                                 </div>
                             </div>
-                            <div ng-show="!wiModal.variableShadingOptions.fill.display && wiModal.varShadingType == 'palette'">
-                                <!-- <h5 class="normal-text">Positive Side</h5> -->
-                                <div class="form-group">
+                            <div ng-show="wiModal.displayType && wiModal.varShadingType == 'palette'">
+                                <h5 class="normal-text">Positive Side</h5>
+                                <!-- <div class="form-group">
                                     <label>
                                         <input type="checkbox"
                                                ng-model="wiModal.variableShadingOptions.positiveFill.display"
                                                ng-disabled="wiModal.variableShadingOptions.fill.display">
                                         Positive Side
                                     </label>
-                                </div>
+                                </div> -->
                                 <div class="row padding-bottom-1em padding-left-1em">
                                     <div class="col-sm-3">
                                         Curve Value:
@@ -649,21 +646,21 @@
                                             <label class="control-label col-sm-4 padding-0">Palette Name</label>
                                             <div class="col-sm-8 padding-0">
                                                 <select ng-model="wiModal.variableShadingOptions.positiveFill.varShading.palName"
-                                                        ng-options="key for (key, value) in wiModal.paletteList"
+                                                        ng-options="item for item in wiModal.paletteName"
                                                         class="form-control wi-form-control"></select>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
-                                <!-- <h5 class="normal-text">Negative Side</h5> -->
-                                <div class="form-group">
+                                <h5 class="normal-text">Negative Side</h5>
+                                <!-- <div class="form-group">
                                     <label>
                                         <input type="checkbox"
                                                ng-model="wiModal.variableShadingOptions.positiveFill.display"
                                                ng-disabled="wiModal.variableShadingOptions.fill.display">
                                         Positive side
                                     </label>
-                                </div>
+                                </div> -->
                                 <div class="row padding-bottom-1em padding-left-1em">
                                     <div class="col-sm-3">
                                         Curve Value:
@@ -695,7 +692,7 @@
                                             <label class="control-label col-sm-4 padding-0">Palette Name</label>
                                             <div class="col-sm-8 padding-0">
                                                 <select ng-model="wiModal.variableShadingOptions.negativeFill.varShading.palName"
-                                                        ng-options="key for (key, value) in wiModal.paletteList"
+                                                        ng-options="item for item in wiModal.paletteName"
                                                         class="form-control wi-form-control"></select>
                                             </div>
                                         </div>
